--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.7",
     "@reduxjs/toolkit": "^2.2.5",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
