--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@apollo/client": "^3.10.7",
     "@reduxjs/toolkit": "^2.2.5",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
