--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@apollo/client": "^3.10.7",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/dompurify": "^3.0.5",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.5",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
