--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@apollo/client": "^3.10.7",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/dompurify": "^3.0.5",
-    "bootstrap": "^5.3.3",
     "dompurify": "^3.1.5",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
