--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,8 @@
   },
   "workbench.iconTheme": "material-icon-theme",
   "cSpell.words": [
-    "airbnb"
+    "airbnb",
+    "bleuvert"
   ],
   "workbench.colorCustomizations": {
     "activityBar.background": "#0F2F4E",
