--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.10.7",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/dompurify": "^3.0.5",
+    "axios": "^1.7.2",
     "dompurify": "^3.1.5",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
