--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,8 @@
     "bleuvert",
     "recaptcha",
     "reinitial",
-    "sitekey"
+    "sitekey",
+    "vertbleu"
   ],
   "workbench.colorCustomizations": {
     "activityBar.background": "#0F2F4E",
