67-display flex on main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,10 +27,13 @@
   "cSpell.words": [
     "airbnb",
     "bleuvert",
+    "fulltext",
     "Obook",
+    "Obookgroove",
     "recaptcha",
     "reinitial",
     "sitekey",
+    "textblock",
     "vertbleu"
   ],
   "workbench.colorCustomizations": {
