67-change of the favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logo1_bleuvert.png",
+      "src": "logo1_noir.png",
       "sizes": "200x200",
       "type": "image/png"
     }
