--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
+    "react-tooltip": "^5.27.1",
     "redux-persist": "^6.0.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5"
