--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 VITE_API_URL=http://localhost:4000
-VITE_RECAPTCHA_SITE_KEY=6LcAZwMqAAAAAK9-pTyGBxlBS2TmHLEWUmc6z7kr
+VITE_RECAPTCHA_SITE_KEY='cecapcha-site-key'
